# hafb-cpp-fundamentals

Module1/: Module1.md
Module1/LA1-1/: Module1.md  age.cpp  bmi.cpp  main.cpp  variables.cpp
Module1/LA1-2/: case.cpp  functions.cpp  main.cpp  my_array.cpp  my_array_container.cpp  mysquares.cpp
Module1/LA1-3/: CMakeLists.txt  main.cpp  my_functions.cpp  my_functions.h  my_functions.hpp
Module1/TO1-2/: CMakeLists.txt  factor.cpp  factor.h  main.cpp
Module1/TO1-4/src/: main.cpp
Module1/TO1-5/src/: cars.cpp  cars.h  main.cpp
Module2/LA2-1/src/: main.cpp
Module2/LA2-2/src/: main.cpp
Module2/LA2-3/src/: main.cpp
Module3/LA3-4/src/: distance.cpp
